fixtures/cs-hash-01/bad/inline-require-md5.js
function hashPassword(password) {
	return require("crypto").createHash("md5").update(password).digest("hex");
}

module.exports = { hashPassword };
